# coolbox-autofan-rs

./: Cargo.toml  README.md  README.ru.md
extra/firmware/: README.md  m328p_1031_1271.hex
src/: api.rs  autofan.rs  main.rs
