[package]
name = "coolbox-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serialport = "4.2"
serde_json = "1.0"
argh = "0.1.14"
actix-web = "4.12.1"
env_logger = "0.11.9"
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-actix-web = "0.1.2"
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web", "cache", "url", "vendored"] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
futures = "0.3"
bytes = "1"
bus = "2.4"
